Fix KPI summary widget border issue that throws off spacing.

--- a/src/app/shared/chart-components/summary-widget/summary-widget.component.scss
+++ b/src/app/shared/chart-components/summary-widget/summary-widget.component.scss
@@ -4,7 +4,7 @@
     .container {
         padding: 0;
         position: relative;
-        width: 334px;
+        //width: 334px;
         height: 170px;
         border-radius: 6px;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
